--- a/style.css
+++ b/style.css
@@ -1,12 +1,9 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -14,79 +11,240 @@
   -webkit-text-size-adjust: 100%;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 2.25rem;
+  letter-spacing: 0.6rem;
+  font-weight: 400;
+  text-align: center;
+  text-transform: uppercase;
+}
+@media screen and (min-width: 768px) {
+  h1 {
+    font-size: 3.2rem;
+    margin: 2rem auto;
+  }
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+p {
+  font-size: 1.25rem;
+  margin-bottom: 1rem;
+}
+
+.tablet {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .tablet {
+    display: block;
+  }
+}
+
+h2 {
+  font-size: 1.7rem;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.3rem;
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+@media screen and (min-width: 768px) {
+  h2 {
+    font-size: 2.5rem;
+  }
 }
 
-.card {
-  padding: 2em;
+section {
+  max-width: 800px;
+  margin: 0 auto;
 }
 
-.read-the-docs {
-  color: #888;
+.stats-container {
+  gap: 2rem;
+  text-align: center;
+}
+.stats {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.stats h4 {
+  font-size: 1.5em;
+}
+@media screen and (min-width: 768px) {
+  .stats {
+    margin: 2em 1em;
+    position: static;
+  }
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.player {
+  min-width: 150px;
 }
-button:hover {
-  border-color: #646cff;
+@media screen and (max-width: 767px) {
+  .player {
+    position: absolute;
+    bottom: 10rem;
+  }
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.player--name {
+  font-size: 1.5rem;
+  line-height: 1.75rem;
+}
+
+@media screen and (max-width: 767px) {
+  .computer {
+    right: 0;
+  }
+}
+
+.ratio {
+  width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  font-size: 4rem;
+  margin: 3rem auto;
+  position: absolute;
+  bottom: 1rem;
+}
+.ratio h3 {
+  margin: 0 1rem;
+  min-width: 100px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .ratio h3 {
+    min-width: 30px;
+    margin: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .ratio {
+    position: relative;
+    justify-content: center;
+    margin: auto 0;
+    font-size: 2rem;
+    max-width: 200px;
+  }
+}
+
+.choices {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.choices button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.25rem;
+  line-height: 2rem;
+  font-weight: 600;
+  background-color: rgba(100, 108, 255, 0.3764705882);
+  border: 2px solid #646cff;
+  width: 150px;
+  height: 150px;
+  margin: 1rem auto;
+  border-radius: 2rem;
+}
+@media screen and (min-width: 768px) {
+  .choices button {
+    font-size: 1.5rem;
+    width: 200px;
+    height: 200px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .choices button {
+    width: 250px;
+    height: 250px;
+  }
+}
+.choices button:hover {
+  background-color: #646cff;
+}
+@media screen and (min-width: 768px) {
+  .choices {
+    flex-direction: row;
+    gap: 2rem;
+    text-align: center;
+  }
+}
+
+#replay {
+  max-width: 600px;
+}
+
+button#replay {
+  text-align: center;
+  font-size: 1.5rem;
+  border: 2px solid #3d4186;
+  background-color: #646cff;
+  padding: 0 2rem;
+  border-radius: 1rem;
+}
+button#replay:hover {
+  background-color: rgba(100, 108, 255, 0.3764705882);
+  border: 2px solid #646cff;
+}
+
+button.hide {
+  display: none;
+}
+
+img {
+  width: 100px;
+  height: 100px;
+}
+
+.results {
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+@media screen and (max-width: 767px) {
+  .results {
+    position: absolute;
+    width: 100vw;
+    bottom: 0;
+    padding-bottom: 1rem;
+  }
+}
+
+footer {
+  display: none;
+  text-align: center;
+  margin: 0 auto;
+}
+@media screen and (min-width: 768px) {
+  footer {
+    display: block;
+  }
 }
 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #ceebef;
   }
   a:hover {
     color: #747bff;
@@ -94,4 +252,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+}/*# sourceMappingURL=style.css.map */
