--- a/style.scss
+++ b/style.scss
@@ -53,21 +53,37 @@ a:hover {
 
 h1 {
   font-size: 2.25rem;
-  line-height: 1.1;
-  letter-spacing: 0.4rem;
+  letter-spacing: 0.6rem;
   font-weight: 400;
   text-align: center;
   text-transform: uppercase;
   @include tablet {
     font-size: 3.2rem;
+    margin: 2rem auto;
+  }
+}
+
+p {
+  font-size: 1.25rem;
+  margin-bottom: 1rem;
+}
+
+.tablet {
+  display: none;
+  @include tablet {
+    display: block;
   }
 }
 
 h2 {
-  font-size: 2.5rem;
-  font-weight: 300;
-  line-height: 1.1;
+  font-size: 1.7rem;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.3rem;
   text-align: center;
+  @include tablet {
+    font-size: 2.5rem;
+  }
 }
 
 section {
@@ -75,34 +91,71 @@ section {
   margin: 0 auto;
 }
 
-.stats {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  & h4 {
-    font-size: 1.5em;
-  }
-}
-
-#stats {
-  display: none;
+.stats-container {
   gap: 2rem;
   text-align: center;
 
   @include tablet {
-    display: block;
+  }
+}
+
+.stats {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  & h4 {
+    font-size: 1.5em;
+  }
+  @include tablet {
+    margin: 2em 1em;
+    position: static;
   }
 }
 
 .player {
-  @include tablet() {
-    width: 250px;
+  min-width: 150px;
+  @include phone {
+    position: absolute;
+    bottom: 10rem;
+  }
+  &--name {
+    font-size: 1.5rem;
+    line-height: 1.75rem;
+  }
+}
+
+.computer {
+  @include phone {
+    right: 0;
   }
 }
 
 .ratio {
+  width: 100vw;
   display: flex;
-  font-size: 2rem;
+  justify-content: space-between;
+  font-size: 4rem;
+  margin: 3rem auto;
+  position: absolute;
+  bottom: 1rem;
+
+  & h3 {
+    margin: 0 1rem;
+    min-width: 100px;
+    text-align: center;
+    @include tablet {
+      min-width: 30px;
+      margin: 0;
+    }
+  }
+  @include tablet {
+    position: relative;
+    justify-content: center;
+    margin: auto 0;
+    font-size: 2rem;
+    max-width: 200px;
+  }
 }
 
 .choices {
@@ -110,43 +163,38 @@ section {
   flex-direction: column;
   justify-content: center;
   & button {
-    font-size: 1.5rem;
-    line-height: 1.25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.25rem;
+    line-height: 2rem;
     font-weight: 600;
     background-color: #646cff60;
     border: 2px solid #646cff;
-    max-width: 50%;
-    padding: 1.5rem;
+    width: 150px;
+    height: 150px;
     margin: 1rem auto;
     border-radius: 2rem;
     @include tablet {
-      padding: 1rem;
+      font-size: 1.5rem;
+      width: 200px;
+      height: 200px;
     }
     @include desktop {
-      padding: 3rem 4rem;
+      width: 250px;
+      height: 250px;
     }
     &:hover {
       background-color: #646cff;
-    }
-    & img {
-      width: 4em;
-      height: 4em;
-      @include tablet {
-        width: 5em;
-        height: 5em;
-      }
     }
   }
 
   @include tablet {
     flex-direction: row;
     gap: 2rem;
-    justify-content: space-evenly;
 
     text-align: center;
-  }
-  @include desktop {
-    gap: 2rem;
   }
 }
 
@@ -180,13 +228,20 @@ img {
   display: flex;
   margin: 0 auto;
   justify-content: center;
+  align-items: center;
   gap: 1rem;
+  @include phone {
+    position: absolute;
+
+    width: 100vw;
+    bottom: 0;
+    padding-bottom: 1rem;
+  }
 }
 
 footer {
   display: none;
   text-align: center;
-
   margin: 0 auto;
   @include tablet {
     display: block;
