--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@
   padding: 0;
 }
 
+body {
+  max-height: 900px;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -57,6 +61,12 @@ p {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .mobile {
+    display: none;
+  }
+}
+
 h2 {
   font-size: 1.7rem;
   font-weight: 400;
@@ -76,9 +86,19 @@ section {
 }
 
 .stats-container {
-  gap: 2rem;
   text-align: center;
 }
+.rounds {
+  font-size: 1.4rem;
+}
+@media screen and (max-width: 767px) {
+  .rounds {
+    position: absolute;
+    width: 100vw;
+    top: 37rem;
+  }
+}
+
 .stats {
   display: flex;
   align-items: center;
@@ -100,7 +120,7 @@ section {
 @media screen and (max-width: 767px) {
   .player {
     position: absolute;
-    bottom: 10rem;
+    top: 30rem;
   }
 }
 .player--name {
@@ -121,10 +141,10 @@ section {
   font-size: 4rem;
   margin: 3rem auto;
   position: absolute;
-  bottom: 1rem;
+  top: 30rem;
 }
 .ratio h3 {
-  margin: 0 1rem;
+  margin: 0 1.5rem;
   min-width: 100px;
   text-align: center;
 }
@@ -136,7 +156,7 @@ section {
 }
 @media screen and (min-width: 768px) {
   .ratio {
-    position: relative;
+    position: static;
     justify-content: center;
     margin: auto 0;
     font-size: 2rem;
@@ -161,7 +181,7 @@ section {
   border: 2px solid #646cff;
   width: 150px;
   height: 150px;
-  margin: 1rem auto;
+  margin: 0.5rem auto;
   border-radius: 2rem;
 }
 @media screen and (min-width: 768px) {
@@ -225,7 +245,7 @@ img {
   .results {
     position: absolute;
     width: 100vw;
-    bottom: 0;
+    top: 40rem;
     padding-bottom: 1rem;
   }
 }
