--- a/style.scss
+++ b/style.scss
@@ -42,6 +42,10 @@ $desktop-breakpoint: 1024px;
   padding: 0;
 }
 
+body {
+  max-height: 900px;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -75,6 +79,12 @@ p {
   }
 }
 
+.mobile {
+  @include tablet {
+    display: none;
+  }
+}
+
 h2 {
   font-size: 1.7rem;
   font-weight: 400;
@@ -92,10 +102,18 @@ section {
 }
 
 .stats-container {
-  gap: 2rem;
   text-align: center;
 
   @include tablet {
+  }
+}
+
+.rounds {
+  font-size: 1.4rem;
+  @include phone {
+    position: absolute;
+    width: 100vw;
+    top: 37rem;
   }
 }
 
@@ -117,7 +135,7 @@ section {
   min-width: 150px;
   @include phone {
     position: absolute;
-    bottom: 10rem;
+    top: 30rem;
   }
   &--name {
     font-size: 1.5rem;
@@ -138,10 +156,10 @@ section {
   font-size: 4rem;
   margin: 3rem auto;
   position: absolute;
-  bottom: 1rem;
+  top: 30rem;
 
   & h3 {
-    margin: 0 1rem;
+    margin: 0 1.5rem;
     min-width: 100px;
     text-align: center;
     @include tablet {
@@ -150,7 +168,7 @@ section {
     }
   }
   @include tablet {
-    position: relative;
+    position: static;
     justify-content: center;
     margin: auto 0;
     font-size: 2rem;
@@ -174,7 +192,7 @@ section {
     border: 2px solid #646cff;
     width: 150px;
     height: 150px;
-    margin: 1rem auto;
+    margin: 0.5rem auto;
     border-radius: 2rem;
     @include tablet {
       font-size: 1.5rem;
@@ -234,7 +252,7 @@ img {
     position: absolute;
 
     width: 100vw;
-    bottom: 0;
+    top: 40rem;
     padding-bottom: 1rem;
   }
 }
